# Presence_Control

./: AGENTS.md  README.md  config.toml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-local-video-runner-and-virtual-line/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-SKELETON.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
presence_control/: __init__.py  __main__.py  cli.py  config.py  geometry.py  overlay.py  runner.py  source_selector.py  video_source.py
presence_control.egg-info/: SOURCES.txt
tests/: test_config.py  test_geometry.py  test_source_spec.py
