[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "presence-control"
version = "0.1.0"
description = "Local video runner with configurable virtual line overlay."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "opencv-python",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
presence-control = "presence_control.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
